--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,28 @@
     transform: rotate(360deg);
   }
 }
+.nav-style{
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: black;
+  
+}
+.link-style{
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  float: left;
+}
+.active{
+  background-color: green;
+}
+.link-style:hover{
+  background-color: #333;
+  color: white;
+  /* border: 2px solid red; */
+  transform: scale(1.1);
+}
